--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-accelerate
-bitsandbytes
-datasets
-tabulate
-tokenizers
-torch
-tqdm
-transformers
+accelerate==0.31.0
+bitsandbytes==0.43.1
+datasets==2.20.0
+tabulate==0.9.0
+tokenizers==0.19.1
+torch==2.3.1
+tqdm==4.66.4
+transformers==4.41.2
